css/styles.scss
---
---

@import "variables";

body, html {
	font-family: $basicfont;
	color: $grey;
	font-size: $basicfontsize;
	line-height: $basicfontheight;
	background-color: black;
	text-align: justify;
	margin: 0;

	display: flex;
	min-width: 100%;
	min-height: 100%;
}

b {
	color: $purple;
}
i {
	color: $pink;
}
u {
	color: $green;
}

a {
	color: $blue;
	text-decoration: none;
}
a:hover {
	border-bottom: 1px solid;
	margin-bottom: -1px;
}

h1 {
	font-family: $accentfont;
	font-weight: bold;
	letter-spacing: 0.1rem;
	margin: 4rem 0 2.5rem 0;
	font-size: 1.4rem;
	text-align: left;
	text-transform: uppercase;
}
h2 {
	font-family: $accentfont;
	font-weight: bold;
	margin-top: 3.5rem;
	margin-bottom: 1rem;
	font-size: 1.2rem;
	text-transform: uppercase;
}
h3 {
	font-family: $accentfont;
	margin-top: 2.5rem;
	margin-bottom: .25rem;
	font-size: 1.2rem;
}
h4 {
	font-family: $accentfont;
	margin-top: 1.25rem;
	margin-bottom: .25rem;
	font-size: 1rem;
	text-transform: uppercase;
}

*[id]:before {
	display: block;
	content: " ";
	margin-top: -8rem;
	height: 8rem;
}

.hidden {
	opacity: 0;
}

.code {
	display: inline;
	font-family: monospace;
	font-size: 1.3rem;
}

.font1 {
	font-family: $basicfont;
	font-weight: normal;
	display: inline-block;
}



// M A I N

img.circle {
	width: 30%;
	max-width: 200px;
	border-radius: 50%;
}
img.smaller {
	width: 125px;
}


.container-frame {
	z-index: 101;
	position: fixed;
	background-color: black;
}
.container-frame-top {
	top: 0;
	left: 0;
	width: 100vw;
	height: 5px;
}
.container-frame-right {
	top: 0;
	right: 0;
	width: 5px;
	height: 100vh;
}
.container-frame-btm {
	bottom: 0;
	left: 0;
	width: 100vw;
	height: 5px;
}
.container-frame-left {
	top: 0;
	left: 0;
	width: 5px;
	height: 100vh;
}


.container {
	flex: 1;
	height: auto;
	padding: 3rem 0 2rem 0;
	display: flex;
	justify-content: center;
	background-color: white;

	.topbar {
		max-width: 1000px;
		position: fixed;
		width: 80%;
		margin-top: -3rem;
		padding: 2rem 10% 1rem 10%;
		flex-basis: auto;
		justify-content: space-between;
		align-items: center;
		background-color: $white80;
		z-index: 100;
		display: flex;

		.logo {
			flex-basis: auto;
			font-weight: bold;
			font-size: .8rem;
			.name {
				display: inline-block;
				padding-right: .25rem;
				font-size: 1.4rem;
				font-family: $accentfont;
				letter-spacing: .05rem;
				text-transform: uppercase;
				a {
					color: $grey;
					text-decoration: none;
				}
				a:hover {
					border: 0;
					margin: 0;
				}
			}
			.what {
				display: inline-block;
				padding-left: .25rem;
				font-size: 1rem;
				text-transform: lowercase;
			}
		}

		.nav {
			text-align: right;
			flex-basis: auto;

			.nav-btn {
				margin: 0 10px 0 10px;
				text-align: center;
				display: inline-block;
				width: 5em;
				border: solid $clear 3px;
				font-weight: bold;
				font-size: 0.9rem;
				letter-spacing: .05rem;
				text-transform: uppercase;
				color: $grey;
				transition: 0.45s;
			}
			.click {
				.btn-underline {
					background-color: $purple;
					height: 3px;
					width: 0%;
					top: 0;
					left: 0;
					transition: 0.45s;
				}
			}
			.click:hover {
				.btn-underline {
					width: 100%;
					transition: 0.45s;
				}
			}
			.current {
				border: solid black 3px;
			}
		}
		.nav a:hover {
			border: none;
		}

	}

	.side {
		flex: 1;
	}
	.main {
		width: 80%;
		max-width: 1000px;
		flex-basis: auto;
		padding-top: 100px;

		.footer {
			width: 100%;
			margin: 5rem 0 2rem 0;
			font-size: 0.9rem;
			a {	i {
					color: $grey;
			}	}
			a:hover { i {
				color: $purple;
			}	}
		}
	}
}

.icon {
	color: $grey;
	padding: .1rem;
	font-size: 1.5rem;
}
.icon:hover {
	color: $blue;
	border-bottom: 0;
	padding-bottom: 0;
}




// A B O U T

.about {
	display: flex;
	justify-content: space-around;

	.info {
		flex: 2;
		margin: 0 4rem;
		margin-top: -1rem;
	}
	.myface {
		flex: 1;
		margin-top: 1rem;

		img {
			width: 100%;
		}

		.smol {
			font-size: 0.9rem;
			padding: 1rem;
			.big {
				display: inline-block;
				font-size: 1rem;
				font-weight: bold;
				text-align: left;
				color: $purple;
			}
		}
	}
	.smallface {
		display: none;
	}
}
@media(max-width: $mid) {
	.about {
		flex-direction: column;
		.myface {
			display: none;
		}
		.smallface {
			display: initial;
			padding: 5rem 20% 0 20%;
			img {
				width: 100%;
			}
		}
	}
}



// W O R K

#photos {
	display: flex;
	flex-wrap: wrap;
	width: 100%;
	justify-content: space-between;
	.photo-item {
		flex: 1;
		height: 200px;
	}
	.photo-box {
		width: 100%;
	}
	.photo-content {
		width: 100%;
	}
}


#projects {
	display: flex;
	flex-wrap: wrap;
	width: 100%;
	justify-content: space-around;

	.proj-item {
		display: flex;
		width: 100%;
		height: 200px;
		margin: .75rem 0;
	}
	.proj-item a:hover {
		border: none;
	}
	.proj-box {
		display: flex;
		align-items: center;
		padding: 2rem;
		position: relative;
		width: 100%;
		background-position: 20% center;
		background-size: 120%;
		overflow: hidden;
		transition: background-size 0.6s ease;

		@media(max-width: $mid) {
			.proj-gradient {
				display: none;
			}
			.proj-content {
				padding-left: 10%;
				padding-right: 20%;
				background-color: rgba(255, 255, 255, 0.7);
			}
		}

		.proj-gradient {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			background-image: linear-gradient(to right, $clear 40%, white 65%);
			z-index: 50;
		}
	}
	.proj-box:hover {
		background-size: 130%;
	}

	.proj-content {
		width: 100%;
		position: relative;
		text-align: left;
		font-size: .9rem;
		line-height: 1.25rem;
		padding-left: 70%;
		color: $grey;
		z-index: 51;
		transition: 0.45s;

		.proj-title {
			font-family: $accentfont;
			font-size: 1.1rem;
			letter-spacing: 0.025rem;
			text-transform: lowercase;
			font-weight: bold;
			margin: 0 0 1.5rem 0;

			.proj-title-line {
				margin: 1rem 0;
				padding-bottom: 0.25rem;
				border-bottom: 2px solid;
			}
			.proj-year {
				display: block;
				font-size: 0.7rem;
				font-weight: normal;
				letter-spacing: 0.1rem;
				color: $midgrey;
				margin-top: -0.5rem;
			}
		}
		.proj-tags {
			font-size: 0.75rem;
			margin-top: 1rem;
			text-transform: uppercase;
		}
	}

	@media(max-width: $mid) {
		.proj-box {
			.proj-gradient {
				display: none;
			}
			.proj-content {
				padding: 1rem 0;
				padding-left: 10%;
				padding-right: 20%;
				background-color: rgba(255, 255, 255, 0.7);
				transition: 0.45s;
			}
		}
		.proj-box:hover .proj-content {
			padding-left: 20%;
			padding-right: 10%;
			transition: 0.45s;
		}
	}
	@media(max-width: 500px) {
		.proj-content {
			.proj-desc {
				display: none;
			}
		}
	}
}



// 4 0 4

.huge {
	font-size: 5rem;
	font-weight: bold;
	text-transform: uppercase;
}




// P R O J E C T  P A G E S

.uhm {
	height: 100vh;
	width: auto;
	margin: 5rem;
}

.data-table {
	display: flex;
	justify-content: space-around;
	padding: .5rem 0;
	margin: 1rem -2rem;
	font-size: 1rem;
	line-height: 1.1rem;
	background-color: white;
	font-family: monospace;

	.data-table-box {
		flex: 1;
		display: flex;
		justify-content: center;
		margin: 0 0 0 .5rem;
		width: auto;
	}
	.title {
		color: $purple;
		font-weight: bold;
		font-size: .8rem;
		font-family: $basicfont;
	}
}

.img-table {
	display: flex;
	justify-content: space-around;
	margin: 2rem -.25em;
	background-color: white;
	line-height: 0;

	.img-table-box {
		flex: 1;
		justify-content: center;
  		align-items: center;
  		padding: 0 .25em;
		width: auto;

		display: flex;

		.img-table-item {
			flex: 0 1 auto;
			width: 100%;
			position: relative;
		}
		.img-table-item img {
			width: 100%;
		}
		.smaller {
			text-align: center;
		}
		.smaller img {
			width: auto;
			padding: auto;
		}
	}
	.extra-margin {
		margin: 0 0 0 1rem;
	}
	.wide {
		flex: 2;
	}

	.img-table-box-col {
		line-height: 0;
		flex: 1;
		padding: 0 .25em;
		margin: -.25em 0;
		width: auto;

		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;

		.img-table-item {
			width: 100%;
			margin: .25em 0;
			position: relative;
		}
		.img-table-item img {
			width: 100%;
		}
	}
}
.img-table-right40 {
	width: 40%;
	float: right;
	margin: 1em -2em 1em 2em;
}
.wide100 {
	margin-left: 1rem;
	margin-right: 1rem;
}
.narrow {
	width: 80%;
	margin: 2rem auto;
}
.narrower {
	width: 70%;
	margin: 2rem auto;
}
.narrowest {
	width: 50%;
	min-width: 400px;
	margin: 2rem auto;
}
.cap {
	padding: .5em 2rem 0 2rem;
	font-size: .9rem;
	line-height: 1.3rem;
}
.text {
	line-height: 1.4em;
}
.attach {
	margin-top: -1.5rem;
}
.attach > div{
	padding-top: 0;
}
.data-attach {
	margin-top: -1rem;
	border-top: $lightgrey solid 1px;
}
.centre {
	text-align: center;
}
.right {
	width: 25%;
	min-width: 200px;
	max-width: 300px;
	float: right;
	margin: -1rem 0rem -1rem 2rem;
}
.right40 {
	width: 40%;
	max-width: 400px;
}

.caption {	// over image caption
	font-size: .8rem;
	position: absolute;
	background-color: rgba(255, 255, 255, 0.5);
	padding: .2rem 1rem;
	line-height: .8rem;
}
.btmrgt {
	text-align: right;
	bottom: 1rem;
	padding-right: 2rem;
	right: 0;
}
.toprgt {
	text-align: right;
	top: 1rem;
	right: 0;
}



// B L O G


.blog-main {
	display: flex;
	justify-content: space-around;

	.blog-content {
		flex: 4;
		width: 100%;
		margin: -2rem 3rem -3rem 0;

		.blog-container {
			margin: 3rem 0;
			padding: 1rem 0rem;

			display: flex;
			justify-content: space-around;
			align-items: stretch;
			width: 100%;

			.blog-img {
				flex: 1;
				width: 100%;
				margin-right: 2rem;
				overflow: hidden;

				img.blog-img-prev {
					object-fit: cover;
					width: 100%;
					height: 100%;
/*					-webkit-transition: all .45s;
					-moz-transition: all .45s;
					-o-transition: all .45s;
					-ms-transition: all .45s;*/
				}

/*				img.blog-img-prev:hover {
					-webkit-transform: scale(1.2); 
					-moz-transform: scale(1.2);
					-o-transform: scale(1.2);
					transform: scale(1.2);
				}*/

			}

			.blog-text {
				flex: 2;

				.blog-head {
					font-size: $fontsize-smaller;
					margin: 1rem 0;
					// border: $lightgrey solid .4rem;
					.blog-title {
						color: $grey;
						font-size: 1.3rem;
						font-family: $accentfont;
						font-weight: bold;
						letter-spacing: .05rem;
						text-transform: uppercase;
						margin: auto;
						margin-bottom: .5rem;

						text-align: left;

						// border-bottom: $lightgrey solid 1px;
						// padding-bottom: .5rem;
						// width: 75%;

						.blog-info {
							margin-right: 1rem;
							color: $midgrey;
							font-size: $fontsize-small;
							line-height: $lineheight-small;
							font-family: $basicfont;
							.fa {
								font-size: $fontsize-smaller;
							}

						}
					}
				}
				.blog-excerpt {
					margin: 1rem 0;
					.blog-read-more {
						margin: .5rem 0;
						font-size: $fontsize-smaller;
						line-height: 1rem;
						text-align: right;
						text-transform: uppercase;
					}
				}

			}
		}
	}
	.blog-side {
		flex: 1;
	}
}

.blog-post-info {
	margin: 3rem 0;
}
.blog-post-small {
	color: $midgrey;
	font-size: $fontsize-small;
	line-height: $lineheight-small;
	font-family: $basicfont;
}
.blog-post-smaller {
	color: $midgrey;
	font-size: $fontsize-smaller;
	line-height: $lineheight-smaller;
	font-family: $basicfont;
}
.blog-post-subheader {
	color: $midgrey;
	font-size: $fontsize-small;
	line-height: $lineheight-small;
	font-family: $basicfont;
	padding-left: .7rem;
}

.blog-tag {
	margin: .2rem .3rem;
	padding: 0.15rem .7rem;
	border: none;
	color: $purple;
	font-size: $fontsize-small;
	background-color: $lightpurple;
	border-radius: .25rem;
	text-decoration: none;
	-webkit-transition: all 0.1s ease-in-out;
	-moz-transition: all 0.1s ease-in-out;
	transition: all 0.1s ease-in-out;
	.fa {
		font-size: .8rem;
		padding-right: .15rem;
	}
}
.blog-tag:hover {
	border: none;
	color: $lightpurple;
	background-color: $purple;
	.fa {
		color: $lightpurple;
	}
}

